--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,42 +1,27 @@
 [build-system]
 requires = ["setuptools", "wheel"]
 
-
 [project]
 name = "enbios2"
-version = "0.1.0"
+version = "0.0.2"
 description = "Enbios 2"
 authors = [
     { name = "Ramin Soleymani" },
 ]
+readme = "README.md"
 license = { text = "MIT License" }
 requires-python = ">=3.9"
 
-dependencies = ['appdirs==1.4.4', 'asteval==0.9.30', 'astunparse==1.6.3', 'brightway25==1.0.6',
-    'bw-migrations==0.2', 'bw-processing==0.8.2', 'bw2analyzer==0.11.5', 'bw2calc==2.0.dev13', 'bw2data==4.0.dev19',
-    'bw2io==0.9.dev19', 'bw2parameters==1.1.0', 'certifi==2023.5.7', 'charset-normalizer==3.1.0', 'contourpy==1.1.0',
-    'cycler==0.11.0', 'Deprecated==1.2.14', 'et-xmlfile==1.1.0', 'exceptiongroup==1.1.1', 'fonttools==4.40.0',
-    'fs==2.4.16', 'idna==3.4', 'importlib-resources==5.12.0', 'iniconfig==2.0.0', 'kaleido==0.2.1',
-    'kiwisolver==1.4.4', 'lxml==4.9.2', 'matplotlib==3.7.1', 'matrix-utils==0.2.5', 'mrio-common-metadata==0.2.1',
-    'numpy==1.25.0', 'openpyxl==3.1.2', 'packaging==23.1', 'pandas==2.0.2', 'peewee==3.16.2', 'Pillow==9.5.0',
-    'Pint==0.22', 'platformdirs==3.6.0', 'plotly==5.15.0', 'pluggy==1.0.0', 'prompt-toolkit==3.0.38',
-    'pydantic==1.10.9', 'pyparsing==3.1.0', 'PyPrind==2.11.3', 'python-dateutil==2.8.2',
-    'pytz==2023.3', 'pyxlsb==1.0.10', 'PyYAML==6.0', 'requests==2.31.0', 'scipy==1.10.1', 'six==1.16.0',
-    'stats-arrays==0.6.5', 'tabulate==0.9.0', 'tenacity==8.2.2', 'tomli==2.0.1', 'tqdm==4.65.0',
-    'typing_extensions==4.6.3', 'tzdata==2023.3', 'Unidecode==1.3.6', 'urllib3==2.0.3', 'voluptuous==0.13.1',
-    'Whoosh==2.7.4', 'wrapt==1.15.0', 'xlrd==2.0.1', 'XlsxWriter==3.1.2', 'xmltodict==0.13.0', 'zipp==3.15.0']
-
+dependencies = [
+"annotated-types==0.5.0", "appdirs==1.4.4", "asteval==0.9.31", "astunparse==1.6.3", "brightway25==1.0.6", "bw-migrations==0.2", "bw-processing==0.8.3", "bw2analyzer==0.11.5", "bw2calc==2.0.dev13", "bw2data==4.0.dev20", "bw2io==0.9.dev19", "bw2parameters==1.1.0", "certifi==2023.7.22", "charset-normalizer==3.2.0", "contourpy==1.1.0", "cycler==0.11.0", "et-xmlfile==1.1.0", "fonttools==4.41.1", "fs==2.4.16", "idna==3.4", "importlib-resources==6.0.0", "kiwisolver==1.4.4", "lxml==4.9.3", "matplotlib==3.7.2", "matrix-utils==0.2.5", "mrio-common-metadata==0.2.1", "numpy==1.25.1", "openpyxl==3.1.2", "packaging==23.1", "pandas==2.0.3", "peewee==3.16.2", "Pillow==10.0.0", "Pint==0.22", "platformdirs==3.9.1", "pydantic==2.1.1", "pydantic_core==2.4.0", "pyparsing==3.0.9", "PyPrind==2.11.3", "python-dateutil==2.8.2", "pytz==2023.3", "pyxlsb==1.0.10", "PyYAML==6.0.1", "requests==2.31.0", "scipy==1.11.1", "six==1.16.0", "stats-arrays==0.6.5", "tabulate==0.9.0", "tqdm==4.65.0", "typing_extensions==4.7.1", "tzdata==2023.3", "Unidecode==1.3.6", "urllib3==2.0.4", "voluptuous==0.13.1", "Whoosh==2.7.4", "wrapt==1.15.0", "xlrd==2.0.1", "XlsxWriter==3.1.2", "xmltodict==0.13.0", "zipp==3.16.2"
+]
 
 [project.optional-dependencies]
-dev = [
-    "transformers==4.28.1",
-    "datasets==2.11.0",
-    "huggingface-hub==0.13.4",
-    "accelerate==0.18.0"
-]
 test = [
     'pytest==7.3.2',
 ]
 
+
 [tool.setuptools]
-packages = ["enbios2"]
+package-dir = {"enbios2" = "enbios2"}
+
