--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,41 @@ description = "Enbios 2"
 authors = [
     { name = "Ramin Soleymani" },
 ]
+
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Programming Language :: Python",
+    "Operating System :: OS Independent",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "Operating System :: MacOS :: MacOS X",
+    "Operating System :: Microsoft :: Windows",
+    "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3 :: Only",
+    "Topic :: Scientific/Engineering :: Information Analysis",
+    "Topic :: Scientific/Engineering :: Mathematics",
+    "Topic :: Scientific/Engineering :: Visualization",
+    "Typing :: Typed"
+]
+
 readme = "README.md"
 license = { text = "MIT License" }
 requires-python = ">=3.9"
 
 dependencies = [
-"annotated-types==0.5.0", "appdirs==1.4.4", "asteval==0.9.31", "astunparse==1.6.3", "brightway25==1.0.6", "bw-migrations==0.2", "bw-processing==0.8.3", "bw2analyzer==0.11.5", "bw2calc==2.0.dev13", "bw2data==4.0.dev20", "bw2io==0.9.dev19", "bw2parameters==1.1.0", "certifi==2023.7.22", "charset-normalizer==3.2.0", "contourpy==1.1.0", "cycler==0.11.0", "et-xmlfile==1.1.0", "fonttools==4.41.1", "fs==2.4.16", "idna==3.4", "importlib-resources==6.0.0", "kiwisolver==1.4.4", "lxml==4.9.3", "matplotlib==3.7.2", "matrix-utils==0.2.5", "mrio-common-metadata==0.2.1", "numpy==1.25.1", "openpyxl==3.1.2", "packaging==23.1", "pandas==2.0.3", "peewee==3.16.2", "Pillow==10.0.0", "Pint==0.22", "platformdirs==3.9.1", "pydantic==2.1.1", "pydantic_core==2.4.0", "pyparsing==3.0.9", "PyPrind==2.11.3", "python-dateutil==2.8.2", "pytz==2023.3", "pyxlsb==1.0.10", "PyYAML==6.0.1", "requests==2.31.0", "scipy==1.11.1", "six==1.16.0", "stats-arrays==0.6.5", "tabulate==0.9.0", "tqdm==4.65.0", "typing_extensions==4.7.1", "tzdata==2023.3", "Unidecode==1.3.6", "urllib3==2.0.4", "voluptuous==0.13.1", "Whoosh==2.7.4", "wrapt==1.15.0", "xlrd==2.0.1", "XlsxWriter==3.1.2", "xmltodict==0.13.0", "zipp==3.16.2"
+    "annotated-types==0.5.0", "appdirs==1.4.4", "asteval==0.9.31", "astunparse==1.6.3", "brightway25==1.0.6", "bw-migrations==0.2", "bw-processing==0.8.3", "bw2analyzer==0.11.5", "bw2calc==2.0.dev13", "bw2data==4.0.dev20", "bw2io==0.9.dev19", "bw2parameters==1.1.0", "certifi==2023.7.22", "charset-normalizer==3.2.0", "contourpy==1.1.0", "cycler==0.11.0", "et-xmlfile==1.1.0", "fonttools==4.41.1", "fs==2.4.16", "idna==3.4", "importlib-resources==6.0.0", "kiwisolver==1.4.4", "lxml==4.9.3", "matplotlib==3.7.2", "matrix-utils==0.2.5", "mrio-common-metadata==0.2.1", "numpy==1.25.1", "openpyxl==3.1.2", "packaging==23.1", "pandas==2.0.3", "peewee==3.16.2", "Pillow==10.0.0", "Pint==0.22", "platformdirs==3.9.1", "pydantic==2.1.1", "pydantic_core==2.4.0", "pyparsing==3.0.9", "PyPrind==2.11.3", "python-dateutil==2.8.2", "pytz==2023.3", "pyxlsb==1.0.10", "PyYAML==6.0.1", "requests==2.31.0", "scipy==1.11.1", "six==1.16.0", "stats-arrays==0.6.5", "tabulate==0.9.0", "tqdm==4.65.0", "typing_extensions==4.7.1", "tzdata==2023.3", "Unidecode==1.3.6", "urllib3==2.0.4", "voluptuous==0.13.1", "Whoosh==2.7.4", "wrapt==1.15.0", "xlrd==2.0.1", "XlsxWriter==3.1.2", "xmltodict==0.13.0", "zipp==3.16.2"
 ]
 
 [project.optional-dependencies]
 test = [
-    'pytest==7.3.2',
+    "pytest==7.3.2",
 ]
 
 
 [tool.setuptools]
-package-dir = {"enbios2" = "enbios2"}
+package-dir = { "enbios2" = "enbios2" }
 
