post merge fixes demo for indexes

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /enbios2/experiment/gnn/features/product.jsonl
 /enbios2/experiment/gnn/base.py
 /enbios2/experiment/class_static_me.py
+/data/databases/*
