--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ charset-normalizer==3.2.0
 contourpy==1.1.0
 cycler==0.11.0
 et-xmlfile==1.1.0
+flatten-dict=0.4.2
 fonttools==4.41.1
 fs==2.4.16
 idna==3.4
