improve ecoinvent unit conversion add use_k_bw_distributions validation add distribution to scenario

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ brightway25==1.0.6
 bw-migrations==0.2
 bw-processing==0.8.3
 bw2analyzer==0.11.5
-bw2calc==2.0.dev13
+bw2calc>=2.0.dev13,<=2.0.dev14
 bw2data==4.0.dev19
 bw2io==0.9.dev19
 bw2parameters==1.1.0
