--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ asteval==0.9.31
 astunparse==1.6.3
 brightway25==1.0.6
 bw-migrations==0.2
-bw-processing==0.8.3
+bw-processing>=0.8.3,<=0.9
 bw2analyzer==0.11.5
-bw2calc>=2.0.dev13,<=2.0.dev14
-bw2data==4.0.dev19
-bw2io==0.9.dev19
+bw2calc>=2.0.dev13,<=2.0.dev16
+bw2data>=4.0.dev19,<=4.0.dev33
+bw2io>=0.9.dev19, <=0.9.dev26
 bw2parameters==1.1.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
@@ -16,7 +16,7 @@ contourpy==1.1.0
 cycler==0.11.0
 et-xmlfile==1.1.0
 flatten-dict==0.4.2
-fonttools==4.41.1
+fonttools==4.47.2
 frictionless==5.16.0
 fs==2.4.16
 idna==3.4
@@ -31,11 +31,10 @@ openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.3
 peewee==3.16.2
-Pillow==10.0.0
+Pillow==10.2.0
 Pint==0.22
 platformdirs==3.9.1
-pydantic==2.1.1
-pydantic_core==2.4.0
+pydantic==2.5.2
 pyparsing==3.0.9
 PyPrind==2.11.3
 python-dateutil==2.8.2
@@ -48,14 +47,14 @@ six==1.16.0
 stats-arrays==0.6.5
 tabulate==0.9.0
 tqdm==4.65.0
-typing_extensions==4.7.1
+#typing_extensions==4.7.1
 tzdata==2023.3
-Unidecode==1.3.6
-urllib3==2.0.4
+Unidecode==1.3.8
+urllib3==2.1.0
 voluptuous==0.13.1
 Whoosh==2.7.4
 wrapt==1.15.0
 xlrd==2.0.1
-XlsxWriter==3.1.2
+XlsxWriter==3.1.9
 xmltodict==0.13.0
 zipp==3.16.2
