--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ numpy==1.25.1
 openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.3
-peewee==3.16.2
+peewee==3.17.0
 Pillow==10.2.0
 Pint==0.22
 platformdirs==3.9.1
@@ -43,6 +43,7 @@ pyxlsb==1.0.10
 PyYAML==6.0.1
 requests==2.31.0
 scipy==1.11.1
+scikit-learn>=1.4.0
 six==1.16.0
 stats-arrays==0.6.5
 tabulate==0.9.0
