--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ description = "Enbios 2"
 authors = [
     { name = "Ramin Soleymani" },
 ]
+dynamic = ["dependencies"]
 
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -30,14 +31,7 @@ classifiers = [
 
 readme = "README.md"
 license = { text = "BSD-3-Clause" }
-requires-python = ">=3.9"
-
-dependencies = [
-"annotated-types==0.5.0", "appdirs==1.4.4", "asteval==0.9.31", "astunparse==1.6.3", "brightway25==1.0.6", "bw-migrations==0.2", "bw-processing>=0.8.3,<=0.9", "bw2analyzer==0.11.5", "bw2calc>=2.0.dev13,<=2.0.dev16", "bw2data>=4.0.dev19,<=4.0.dev33", "bw2io>=0.9.dev19, <=0.9.dev26", "bw2parameters==1.1.0", "certifi==2023.7.22", "charset-normalizer==3.2.0", "contourpy==1.1.0", "cycler==0.11.0", "et-xmlfile==1.1.0", "flatten-dict==0.4.2", "fonttools==4.47.2", "frictionless==5.16.0", "fs==2.4.16", "idna==3.4", "importlib-resources==6.0.0", "kiwisolver==1.4.4", "lxml==4.9.3", "matplotlib==3.7.2", "matrix-utils==0.2.5", "mrio-common-metadata==0.2.1", "numpy==1.25.1", "openpyxl==3.1.2", "packaging==23.1", "pandas==2.0.3", "peewee==3.17.0", "Pillow==10.2.0", "Pint==0.22", "platformdirs==3.9.1", "pydantic==2.5.2", "pyparsing==3.0.9", "PyPrind==2.11.3", "python-dateutil==2.8.2", "pytz==2023.3", "pyxlsb==1.0.10", "PyYAML==6.0.1", "requests==2.31.0", "scipy==1.11.1", "scikit-learn>=1.4.0", "six==1.16.0", "stats-arrays==0.6.5", "tabulate==0.9.0", "tqdm==4.66.1", "tzdata==2023.3", "Unidecode==1.3.8", "urllib3==2.1.0", "voluptuous==0.13.1", "Whoosh==2.7.4", "wrapt==1.15.0", "xlrd==2.0.1", "XlsxWriter==3.1.9", "xmltodict==0.13.0", "zipp==3.16.2"
-]
-
-[project.scripts]
-enbios-cli = "enbios2:main_cli"
+requires-python = ">=3.9,<3.12"
 
 [project.urls]
 "Homepage" = "https://github.com/LIVENlab/enbios"
@@ -51,6 +45,9 @@ test = [
 
 [tool.setuptools]
 package-dir = { "enbios" = "enbios" }
+
+[tool.setuptools.dynamic]
+dependencies = {file="requirements.txt"}
 
 [tool.ruff]
 line-length = 90
