--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ lxml==4.9.3
 matplotlib==3.7.2
 matrix-utils==0.2.5
 mrio-common-metadata==0.2.1
-numpy==1.25.1
+numpy==1.26.4
 openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.3
@@ -35,7 +35,7 @@ Pillow==10.2.0
 Pint==0.22
 platformdirs==3.9.1
 pydantic==2.5.2
-pyparsing==3.1.1
+pyparsing
 PyPrind==2.11.3
 python-dateutil==2.8.2
 python-mermaid==0.1.3
