add mypy config to pyproject toml file
more mypy fixes

refactor adapter validate_scenario_node method to include scenario_name (required for the simple_assignment_adapter.py)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ test = [
     "pytest==7.3.2", "Deprecated>=1.2.14"
 ]
 
+[tool.mypy]
+ignore_missing_imports = true
+
 
 [tool.setuptools]
 package-dir = { "enbios" = "enbios" }
