--- a/requirements.txt
+++ b/requirements.txt
@@ -30,12 +30,16 @@ numpy==1.26.4
 openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.3
-peewee==3.17.0
-Pillow==10.2.0
-Pint==0.22
+peewee==3.17.1
+pillow==10.2.0
+Pint==0.23
+pkginfo==1.10.0
 platformdirs==3.9.1
-pydantic==2.5.2
-pyparsing
+pydantic==2.6.4
+pydantic_core==2.16.3
+pydoc-markdown==4.8.2
+Pygments==2.17.2
+pyparsing==3.1.1
 PyPrind==2.11.3
 python-dateutil==2.8.2
 python-mermaid==0.1.3
@@ -43,7 +47,7 @@ pytz==2023.3
 pyxlsb==1.0.10
 PyYAML==6.0.1
 requests==2.31.0
-scipy==1.11.1
+scipy==1.12.0
 scikit-learn>=1.4.0
 six==1.16.0
 stats-arrays==0.6.5
@@ -51,7 +55,7 @@ tabulate==0.9.0
 tqdm==4.66.1
 tzdata==2023.3
 Unidecode==1.3.8
-urllib3==2.1.0
+urllib3==2.2.1
 voluptuous==0.13.1
 Whoosh==2.7.4
 wrapt==1.15.0
