--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,8 @@ idna==3.4
 importlib-resources==6.0.0
 kiwisolver==1.4.4
 lxml==4.9.3
-matplotlib==3.7.2
+matplotlib==3.8.3
+matplotlib-inline==0.1.6
 matrix-utils==0.2.5
 mrio-common-metadata==0.2.1
 numpy==1.26.4
