--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,211 +1,66 @@
-anyio==3.7.1
+annotated-types==0.5.0
 appdirs==1.4.4
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asteval==0.9.30
-asttokens==2.2.1
+asteval==0.9.31
 astunparse==1.6.3
-attrs==23.1.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
 brightway25==1.0.6
-build==0.10.0
 bw-migrations==0.2
-bw-processing==0.8.2
+bw-processing>=0.8.3,<=0.9
 bw2analyzer==0.11.5
-bw2calc==2.0.dev13
-bw2data==4.0.dev19
-bw2io==0.9.dev19
+bw2calc>=2.0.dev13,<=2.0.dev16
+bw2data>=4.0.dev19,<=4.0.dev33
+bw2io>=0.9.dev19, <=0.9.dev26
 bw2parameters==1.1.0
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.5
-cmake==3.26.4
-colorama==0.4.6
-comm==0.1.3
+certifi==2023.7.22
+charset-normalizer==3.2.0
 contourpy==1.1.0
-cryptography==41.0.2
 cycler==0.11.0
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-docutils==0.20.1
--e git+https://github.com/ENVIRO-Module/enbios2@16b0f0df93a8e110affad32261eb21ef0a014014#egg=enbios2
 et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-executing==1.2.0
-fastjsonschema==2.17.1
-filelock==3.12.2
-fonttools==4.40.0
-fqdn==1.5.1
+flatten-dict==0.4.2
+fonttools==4.47.2
+frictionless==5.16.0
 fs==2.4.16
-fsspec==2023.6.0
-ghp-import==2.1.0
-huggingface-hub==0.16.4
 idna==3.4
-importlib-metadata==6.8.0
-importlib-resources==5.12.0
-iniconfig==2.0.0
-ipykernel==6.24.0
-ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.7
-isoduration==20.11.0
-jaraco.classes==3.3.0
-jedi==0.18.2
-jeepney==0.8.0
-Jinja2==3.1.2
-joblib==1.3.1
-jsonpointer==2.4
-jsonschema==4.18.0
-jsonschema-specifications==2023.6.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-kaleido==0.2.1
-keyring==24.2.0
+importlib-resources==6.0.0
 kiwisolver==1.4.4
-lit==16.0.6
-lxml==4.9.2
-Markdown==3.3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.7.1
+lxml==4.9.3
+matplotlib==3.8.3
 matplotlib-inline==0.1.6
 matrix-utils==0.2.5
-mdurl==0.1.2
-mergedeep==1.3.4
-mistune==3.0.1
-mkdocs==1.4.3
-mkdocs-material==9.1.19
-mkdocs-material-extensions==1.1.1
-more-itertools==10.0.0
-mpmath==1.3.0
 mrio-common-metadata==0.2.1
-nbclassic==1.0.0
-nbclient==0.8.0
-nbconvert==7.6.0
-nbformat==5.9.1
-nest-asyncio==1.5.6
-networkx==3.1
-nltk==3.8.1
-notebook==6.5.4
-notebook_shim==0.2.3
-numpy==1.25.0
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
+numpy==1.26.4
 openpyxl==3.1.2
-overrides==7.3.1
 packaging==23.1
-pandas==2.0.2
-pandocfilters==1.5.0
-parso==0.8.3
-peewee==3.16.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.5.0
-Pint==0.22
-pkginfo==1.9.6
-platformdirs==3.6.0
-plotly==5.15.0
-pluggy==1.0.0
-prometheus-client==0.17.1
-prompt-toolkit==3.0.38
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-pydantic==1.10.9
-Pygments==2.15.1
-pymdown-extensions==10.1
-pyparsing==3.1.0
+pandas==2.0.3
+peewee==3.17.1
+pillow==10.2.0
+Pint==0.23
+pkginfo==1.10.0
+platformdirs==3.9.1
+pydantic==2.6.4
+pydantic_core==2.16.3
+pydoc-markdown==4.8.2
+Pygments==2.17.2
+pyparsing==3.1.1
 PyPrind==2.11.3
-pyproject_hooks==1.0.0
-pytest==7.3.2
 python-dateutil==2.8.2
-python-json-logger==2.0.7
+python-mermaid==0.1.3
 pytz==2023.3
 pyxlsb==1.0.10
-PyYAML==6.0
-pyyaml_env_tag==0.1
-pyzmq==25.1.0
-qtconsole==5.4.3
-QtPy==2.3.1
-readme-renderer==40.0
-referencing==0.29.1
-regex==2023.6.3
+PyYAML==6.0.1
 requests==2.31.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986==2.0.0
-rfc3986-validator==0.1.1
-rich==13.4.2
-rpds-py==0.8.10
-ruff
-safetensors==0.3.1
-scikit-learn==1.3.0
-scipy==1.10.1
-SecretStorage==3.3.3
-Send2Trash==1.8.2
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
+scipy==1.12.0
+scikit-learn>=1.4.0
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4.1
-stack-data==0.6.2
 stats-arrays==0.6.5
-sympy==1.12
 tabulate==0.9.0
-tenacity==8.2.2
-terminado==0.17.1
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-tokenizers==0.13.3
-toml==0.10.2
-tomli==2.0.1
-torch==2.0.1
-torch-geometric==2.3.1
-torchvision==0.15.2
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.9.0
-transformers==4.30.2
-triton==2.0.0
-twine==4.0.2
-typing_extensions==4.6.3
+tqdm==4.66.1
 tzdata==2023.3
-Unidecode==1.3.6
-uri-template==1.3.0
-urllib3==2.0.3
+Unidecode==1.3.8
+urllib3==2.2.1
 voluptuous==0.13.1
-watchdog==3.0.0
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.1
 Whoosh==2.7.4
-widgetsnbextension==4.0.8
 wrapt==1.15.0
 xlrd==2.0.1
-XlsxWriter==3.1.2
+XlsxWriter==3.1.9
 xmltodict==0.13.0
-zipp==3.15.0
+zipp==3.16.2
