--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ Pint==0.23
 pkginfo==1.10.0
 platformdirs==3.9.1
 pydantic==2.6.4
+pydantic-settings==2.2.1
 pydantic_core==2.16.3
 pydoc-markdown==4.8.2
 Pygments==2.17.2
